--- a/assets/styles/sass/panels/_panel.scss
+++ b/assets/styles/sass/panels/_panel.scss
@@ -25,7 +25,7 @@
 	&.ui-sortable-helper {
 		transform: scale(1.05);
 		box-shadow: 0 0 35px rgba(black, 0.1);
-		z-index: 999999;
+		z-index: 999999 !important;
 	}
 
 	&.ui-sortable-placeholder {
